htdocs/theme/raw/sass/layout/card/_card-secondary.scss
// card is the style used for the user-editable cards used across Mahara

.card.card-secondary {
    &.card {
        @include box-shadow(none);
        border-color: transparent;
    }
    .admin & {
        border-color: $card-border-color;
    }
    .admin .user-page-content & {
        border-color: transparent;
    }
    > .card-header {
        font-family: $font-family-serif;
        border-bottom: 2px solid $card-secondary-border;
        font-size: $h4-font-size;
        margin-top: 0;
    }
    &.blockinstance.card {
        background-color: transparent;
        .card-header {
            background-color: $card-header-bg;
        }
    }
    > .card-header, .card-header-nested {
        border-bottom: 2px solid $card-secondary-border;
        padding: 10px 8px 10px 0px;
        background: transparent;

        // In page builder we can choose to not have a heading,
        // but we still need a dragable object.
        // Use a placeholder for visual help
        // will appear with the no-heading class in view mode
        &.card-header-placeholder {
            border: 1px solid scale-color($gray-300, $lightness: -10.93);
            border-style: dashed;
            background-color: $card-bg;
            .blockinstance-header {
                opacity:0.6;
            }
        }
        &.drag-handle {
            padding-left: 8px;
        }
    }
    &.card-warning {
         > .card-header, .card-header-nested {
            border-left: 4px solid $card-secondary-border;
            background-color: $state-warning-bg;
            border-bottom: 1px solid $state-warning-border;
        }
    }
    & .card-warning .card-body {
            background-color: $state-warning-bg;
    }
    .card-header-plain {
        border: 1px solid scale-color($gray-300, $lightness: -10.93);
    }
    .list-group .list-group-item {
        border-left: 0;
        border-right: 0;
        &:first-child {
            border-top:0;
        }
    }
    > .card-body,
    > .block > .card-body {
        padding: 15px 0px;
        &.flush {
            padding: 15px 0 0 0;
        }
    }
    // If there is no heading we don't want padding on the card-body
    > .no-heading {
        > .card-body {
            padding: 0;
        }
        .has-attachment {
            margin: 0;
        }
    }

    // wallpost blocks don't need secdonary card border color
    .wallpost {
        .card-header {
            border-color: $card-border-color;
        }
    }

    // pdf blocks need padding taken away
    &.bt-pdf .block > .card-body {
      padding: 0;
    }

    &.bt-resumefield {
      .resume-content {
        border: 1px solid $card-border-color;
        padding: 10px 15px;

        .list-group-item-heading {
          font-size: .75001rem;
        }
      }
    }
}

